# Sovereignty-Architecture-Elevator-Pitch-

./: .env.example  .gitattributes  .gitignore  .hashes.txt  ACTION_ITEMS.md  ARSENAL_ANALYSIS.md  AUTISTIC_AUDIT_DNA_INTERVIEW_FRAMEWORK_v2.yaml  AUTONOMOUS_OPERATION_LICENSE.md  BLOOMS_TAXONOMY_FRAMEWORK.md  BLOOM_TAXONOMY_INTERVIEW.md  CLAUDE_MESSAGE_GOODNIGHT.md  CLIENT_ADVANTAGE_PACKAGE.md  COGNITIVE_ARCHITECTURE.md  CONTRADICTION_CREATION_ENGINE.md  DIALECTICAL_PATH.md  DISCLAIMER.yaml  DOMINATORFIED_INTERVIEW_QUESTIONS.md  Dockerfile.cpa-sentinel  Dockerfile.jdk  ELEVATOR_PITCH.md  ENTERPRISE_GITHUB_ARCHITECTURE.md  EVOLUTIONARY_TRACE.md  EVOLUTION_DOCUMENTATION_MAP.md  EVOLUTION_MASTER_INDEX.md  FIRST_SOVEREIGN_OS.md  F_ROADMAP.md  GKE_CLUSTER_RUNBOOK.md  HOUSE_MD_DIFFERENTIAL_ENGINE.md  Harden_Security verification  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  INVENTION_REGISTRY.md  KHAOSOS_ARCHITECTURE.md  KHAOSOS_QUICKSTART.md  KHAOSOS_ROADMAP.md  Let's make history  MEMBERSHIP_CHARTER.md  MIRROR_GENERALS.md  Make it happen  Makefile  (+85 more)
.devcontainer/: devcontainer.json
SovereignPRManager/: .gitignore  Dockerfile  README.md  __init__.py  auto_merger.py  config.yaml  conflict_detector.py  install.sh  legion_reviewer.py  pr_monitor.py  process_existing_prs.py  requirements.txt  synthesis_engine.py
alternatives/: README.md
assessment_templates/: README.md  answer_template.md  submission_template.yaml
battleground/: README.md  STATE-redblue.yaml
brand/: trademark-v2.html
configs/: README.md
contradictions/: CONVERSION_PLAYBOOK.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATS.md  QUICK_START.md  README.md  VENDOR_LOCKIN_SYMPTOMS.md  contradictions.json  deploy-contradictions.sh  discord_commands.py  k8s-manifests-locked.yaml  k8s-manifests-portable.yaml  landing_sections.html
data/: README.md
docker-compose/: khaosllm.yml  khaossearch.yml
docs/: BLACK_OPS_LAB.md  EXPERIMENT_TEMPLATE.md  HOUSE_MD_DIFFERENTIAL_ENGINE.md  HYPERVISOR_SETUP.md  IMPLEMENTATION_ROADMAP.md  LLM_SELF_AWARENESS_THESIS.md  PROMPTING_MECHANICS.md  README.md  SOVEREIGNTY_DOCTRINE.md  SOVEREIGN_SWARM_ARCHITECTURE.md  SOVEREIGN_TOOL_STACK.md  SWARM_COLLIDER_METHOD.md  SWARM_HANDSHAKE_PROTOCOL.md  SWARM_METHODOLOGY.md
examples/: war-room-integration.ts
sovereignty-log-analyzer/: Cargo.toml  README.md
sovereignty-log-analyzer/src/: analyzer.rs  log_parser.rs  main.rs  sovereignty_metrics.rs
(+249 files in other folders)
