[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-solver"
version = "0.1.0"
description = "Autonomous Methodology Solver for Strategickhaos Sovereignty Architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Strategickhaos"}
]
keywords = [
    "autonomy",
    "methodology",
    "workflow",
    "orchestration",
    "multi-agent",
    "sovereignty"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0"
]

[project.scripts]
sovereign = "sovereign_solver.cli:main"

[project.urls]
Homepage = "https://github.com/Strategickhaos/Sovereignty-Architecture-Elevator-Pitch"
Repository = "https://github.com/Strategickhaos/Sovereignty-Architecture-Elevator-Pitch"

[tool.setuptools.packages.find]
include = ["sovereign_solver*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
