[package]
name = "sovereignty-log-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Strategickhaos Swarm Intelligence"]
description = "CLI tool for analyzing GKE audit logs and computing sovereignty metrics"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"

[dev-dependencies]
tempfile = "3.14"

[[bin]]
name = "sovereignty-log-analyzer"
path = "src/main.rs"
